[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://res/awwye.png" type="Texture" id=2]
[ext_resource path="res://player/TestPlayer.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Node2D" type="Sprite" parent="." index="0"]

modulate = Color( 0.25, 0.25, 0.25, 1 )
position = Vector2( 8.20215, -241.966 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -86.0
margin_top = -241.0
margin_right = 116.0
margin_bottom = -143.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Placeholder Art and Animations"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="TestPlayer" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( -100, 0 )

[node name="TestPlayer2" parent="." index="3" instance=ExtResource( 3 )]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( 100, 0 )
scale = Vector2( -1, 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Camera2D" type="Camera2D" parent="." index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -600
limit_top = -10000000
limit_right = 600
limit_bottom = 20
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 1.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.2
drag_margin_right = 0.0
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = true
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Transform" ]

[node name="Label2" type="Label" parent="Camera2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -170.0
margin_right = 32.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Placeholder Art and Animations"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]


